CSS3 - more lay-out + added a create shoppinglist button when you add a recipe to shoppinglist but have no shoppinglists yet

--- a/src/app/recipe/add-product-to-recipe/add-product-to-recipe.component.html
+++ b/src/app/recipe/add-product-to-recipe/add-product-to-recipe.component.html
@@ -1,4 +1,4 @@
-<div style="position: fixed; bottom: 20vw; width: 100%;">
+<div style="position: fixed; top: 47vh; width: 100%;">
   <div class="add-product-container" (clickOutside)="onClickedOutside($event)">
     <div class="cancel">
       <button (click)="close()">X</button>
