--- a/src/app/recipe/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.scss
@@ -8,9 +8,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
+
   .recipe-information {
     width: 40%;
 
+  }
+
+  .recipe-description {
+    word-break: break-word;
   }
 
   .section {
