--- a/src/app/shoppinglist/add-product/add-product.component.scss
+++ b/src/app/shoppinglist/add-product/add-product.component.scss
@@ -72,7 +72,7 @@
   padding: 5px;
   background-color: white;
   cursor: pointer;
-  color: black;
+  color: #303030;
 }
 .search-result:hover {
   color: white;
