CSS3 - more lay-out + added a create shoppinglist button when you add a recipe to shoppinglist but have no shoppinglists yet

--- a/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
+++ b/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
@@ -1,8 +1,7 @@
 <div class="create-shoppinglist-container">
-  <div class="page-title logo">
-    Create a new shoppinglist
+  <div class="page-title">
+    New shoppinglist
   </div>
-
   <div class="create-shoppinglist-form-container">
     <form (ngSubmit)="save()">
       <h4> Please provide a name for your shopping list: </h4>
