--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
@@ -1,3 +1,4 @@
+<div class="page-title">Shoppinglists</div>
 <div *ngIf="shoppingLists">
   <div class="overview-shoppinglist-container">
     <div class="overview-shoppinglist">
