--- a/src/app/shoppinglist/add-product/add-product.component.scss
+++ b/src/app/shoppinglist/add-product/add-product.component.scss
@@ -49,7 +49,7 @@
       width: auto;
     }
 
-    button:hover{
+    button:hover {
       color: #0162da;
     }
   }
@@ -63,29 +63,31 @@
   }
 
 }
-.search-result{
+
+.search-result {
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
-  width:195px;
+  width: 195px;
   height: 16px;
   padding: 5px;
   background-color: white;
   cursor: pointer;
   color: #303030;
 }
+
 .search-result:hover {
   color: white;
   background-color: var(--primary-color);
 }
-#search-box{
+
+#search-box {
   width: 200px;
   height: 20px;
 }
 
 .found-products {
-  position: fixed;
-  left: 51.75%;
+  position: relative;
   top: 57%;
   width: 14vw;
 }
