--- a/src/app/recipe/add-product-to-recipe/add-product-to-recipe.component.scss
+++ b/src/app/recipe/add-product-to-recipe/add-product-to-recipe.component.scss
@@ -22,6 +22,7 @@
 
     .property-element {
       min-width: 10vw;
+      max-height: 5vw;
     }
 
 
@@ -49,7 +50,7 @@
       width: auto;
     }
 
-    button:hover{
+    button:hover {
       color: #0162da;
     }
   }
@@ -63,27 +64,33 @@
   }
 
 }
-.search-result{
+
+.search-result {
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
+  width: 195px;
+  height: 16px;
+  padding: 5px;
   background-color: white;
   cursor: pointer;
-  color: black;
-  font-size: 2vh;
+  color: #303030;
 }
+
 .search-result:hover {
   color: white;
   background-color: var(--primary-color);
 }
-#search-box{
 
+#search-box {
+  width: 200px;
+  height: 20px;
 }
 
 .found-products {
-  position: fixed;
-  left: 51.6%;
-  top: 60vh;
+  position: relative;
+  top: 57%;
   width: 14vw;
+  overflow: visible;
 }
 
